--- a/bibliography.bib
+++ b/bibliography.bib
@@ -169,6 +169,16 @@ year = {2012}
   publisher={Oxford Univ Press}
 }
 
+@article{Paulson2013,
+  title={Differential abundance analysis for microbial marker-gene surveys},
+  author={Paulson, Joseph N and Stine, O Colin and Bravo, H{\'e}ctor Corrada and Pop, Mihai},
+  journal={Nature methods},
+  volume={10},
+  number={12},
+  pages={1200--1202},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
 
 @Manual{,
   title = {R: A Language and Environment for Statistical Computing},
